[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "notion-client>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "werkzeug>=3.1.3",
    "python-telegram-bot>=22.0",
    "telegram>=0.0.1",
    "boto3>=1.38.13",
    "botocore>=1.38.13",
    "sift-stack-py>=0.5.2",
    "replit>=4.1.1",
    "google-auth>=2.40.1",
    "replit-object-storage>=1.0.2",
]
